# intellius

./: .gitignore  .pre-commit-config.yaml  README.md  SERVER_SETUP.md  ddns-route53.yml  docker-compose.yml  nginx-certbot.env  pyproject.toml  requirements.txt
.deploy/production/: gunicorn.py  nginx.conf
scripts/: deploy-env.py  deploy-env.sh  server-deploy.sh  setup-git-hooks.sh  setup-hooks.sh
scripts/hooks/: post-merge  server-env-update.sh
server/: Dockerfile
server/app/: pytest.ini
server/app/src/: main.py  security.py
server/app/src/apps/: router.py
server/app/src/apps/api/: chat.py  user.py
server/app/src/apps/model/: __init__.py  chat.py  user.py
server/app/src/apps/repository/: chat.py  user.py
server/app/src/apps/schema/: __init__.py
server/app/src/apps/schema/request/: __init__.py  chat.py  user.py
server/app/src/apps/schema/response/: __init__.py  chat.py  user.py
server/app/src/apps/service/: user.py
server/app/src/core/: README_SECRETS.md  model.py  secrets.py
server/app/src/core/database/: connection.py
server/app/static/css/: bootstrap.css  style.css
server/app/static/docs/: README.md
server/app/static/js/: chat.js  utils.js
server/app/templates/: static_browser.html
